--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<div class="navbar-header">
+		<a class="navbar-brand" href="#">Treebook</a>
+		<ul class="nav navbar-nav">
+			<li><%= link_to "All Statuses", statuses_path%></li>
+			<li><%= link_to "New Status", new_status_path%></li>
+		</ul>
+	</div>
+</nav>
 
+
+<div class="container">
 <%= yield %>
-
+</div>
 </body>
 </html>
