Install devise for authentication, add a user, add first_name, last_name and profile_name, install devise views

--- a/app/assets/stylesheets/statuses.css.scss
+++ b/app/assets/stylesheets/statuses.css.scss
@@ -12,9 +12,9 @@
 }
 
 
-.status .admin {
-	display: none;
-}
+// .status .admin {
+// 	display: none;
+// }
 
 .status.hover .admin{
 	display: inline;
