added simple form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 </nav>
 
 
-<div class="container">
+<div class="container active">
 	<p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 <%= yield %>
