--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -4,7 +4,7 @@
 <%= link_to "Post a new status", new_status_path, class: "btn btn-success" %>
 <% @statuses.each { |status| %>
   <div class="status">
-    <strong><%=status.name%></strong>
+    <strong></strong>
     <p><%=status.content%></p>
     <div class="meta">
       <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
