--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,17 @@
 			<li><%= link_to "New Status", new_status_path%></li>
 		</ul>
 	</div>
+	<div class="collapse navbar-collapse">
+		<ul class="nav navbar-nav navbar-right">
+			<% if user_signed_in? %>
+    			<li><%= link_to current_user.full_name, edit_user_registration_path %></li>
+				<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+			<% else%>
+				<li><%= link_to "Register", new_user_registration_path %></li>
+				<li><%= link_to "Log in", new_user_session_path %></li>
+			<%end%>
+		</ul>
+	</div>
 </nav>
 
 
